-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.3, 5.13.0 Beta2
-
-
562113342f2b232d38a3ea05e84b8d2584799218 (qt/qtserialbus/5.13)
The minimal value for QModbusClient::setTimeout() is hardcoded to 50ms.
https://code.qt.io/cgit/qt/qtserialbus.git/tree/src/serialbus/qmodbusclient.cpp#n181
It should be possible to set it to lower limits, like 10ms.
| For Gerrit Dashboard: QTBUG-75461 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 259955,3 | Reduce minimal Modbus response timeout to 10ms | 5.13 | qt/qtserialbus | Status: MERGED | +2 | 0 |