Reduce minimal Modbus response timeout to 10ms

Fixes: QTBUG-75461
Change-Id: Id5aed512cc9f163dc719cae0b121b9c65e0f232a
Reviewed-by: André Hartmann <aha_1980@gmx.de>